--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,15 +1,8 @@
-=======
-CHANGES
-=======
-
-
-1.0.1 (2009-11-20)
+1.0.2 (Unreleased)
 ------------------
 
-- Update tests
 
-
-1.0.0 (2009-07-01)
+1.0.1 (2010-01-19)
 ------------------
 
-- Initial release.
+- zojax initial release
